Fixed most styling issues for the new merge, but there is still some misalignment with the footer and possibly navbar

--- a/assets/src/calendar/style.css
+++ b/assets/src/calendar/style.css
@@ -1,4 +1,4 @@
-body {
+main {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -151,7 +151,7 @@ form label, form input, form button {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 1001;
     left: 0;
     top: 0;
     width: 100%;
